style(responsive contact page): :art: responsive contact us page

--- a/styles/contact.module.css
+++ b/styles/contact.module.css
@@ -112,7 +112,7 @@
   padding-right: 25px;
 }
 .Address1 > svg {
-  width: 45px;
+  min-width: 45px;
   height: 81px;
 }
 .Address1 > h3 {
@@ -141,4 +141,106 @@
   width: 100%;
   height: 70vh;
   padding: 0 50px;
+}
+
+@media only screen and (max-width: 1000px) {
+  .background_image2_left > h1 {
+    font-size: 48px;
+  }
+  .background_image2_left > h3 {
+    font-size: 24px;
+  }
+  .background_image2_left > span {
+    font-size: 18px;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .section_Address,
+  .contactUs_information {
+    padding: 0 12px !important;
+    margin-bottom: 48px;
+  }
+  .background_image2 {
+    margin-bottom: 48px !important;
+    justify-content: space-between;
+    padding: 0 12px;
+  }
+  .background_image2_right {
+    padding: 0 !important;
+  }
+  .background_image2_left > h1 {
+    font-size: 36px;
+  }
+  .background_image2_left > h3 {
+    font-size: 18px;
+  }
+  .background_image2_left > span {
+    font-size: 14px;
+  }
+  .map_container {
+    padding: 0 12px !important;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .background_image2 {
+    height: 300px;
+  }
+  .background_image2_right {
+    width: 220px !important;
+  }
+  .background_image2_right > img {
+    width: 100% !important;
+    height: 100% !important;
+    object-fit: cover !important;
+  }
+  .background_image2_left {
+    width: calc(100% - 230px);
+  }
+  .background_image2_left > h1 {
+    font-size: 24px;
+    text-align: center;
+  }
+  .background_image2_left > h3 {
+    font-size: 16px;
+    text-align: center;
+  }
+  .background_image2_left > span {
+    font-size: 12px;
+    text-align: center;
+  }
+  .contactUs_information {
+    flex-direction: column;
+  }
+  .contactUs_information > div {
+    width: 100%;
+    margin: 0;
+  }
+  .contactUs_information > div:nth-child(2) {
+    margin: 16px 0 !important;
+  }
+  .Address1 {
+    padding: 16px !important;
+  }
+  .Address1 > h3 {
+    font-size: 16px;
+    text-align: justify;
+    line-height: 32px;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .background_image2_right {
+    display: none;
+  }
+  .background_image2_left {
+    width: 100% !important;
+    height: 100% !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .Address1 > h3 {
+    font-size: 14px !important;
+  }
 }
