--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -403,13 +403,13 @@
   margin-bottom: 20px;
 }
 .gallery_right_top > a > img {
-  border-radius: 0 20px 20px 0;
+  border-radius: 0 20px 0 0;
   object-fit: cover;
   width: 100%;
   height: 200px;
 }
 .gallery_right_bottom > a > img {
-  border-radius: 0 20px 20px 0;
+  border-radius: 0 0 20px 0;
   object-fit: cover;
   width: 100%;
   height: 200px;
