fix(ui bugs): :bug: fix ui bugs

--- a/styles/category.module.css
+++ b/styles/category.module.css
@@ -63,6 +63,54 @@
   border-radius: 150px;
   margin-bottom: 20px;
 }
+.line_x_1 {
+  width: 220px;
+  height: 6px;
+  background: linear-gradient(
+    270deg,
+    #db3567 0%,
+    #156419 0.01%,
+    rgba(21, 100, 25, 0) 100%
+  );
+  border-radius: 150px;
+  margin-bottom: 20px;
+}
+.line_x_2 {
+  width: 180px;
+  height: 6px;
+  background: linear-gradient(
+    270deg,
+    #db3567 0%,
+    #156419 0.01%,
+    rgba(21, 100, 25, 0) 100%
+  );
+  border-radius: 150px;
+  margin-bottom: 20px;
+}
+.line_x_3 {
+  width: 70px;
+  height: 6px;
+  background: linear-gradient(
+    270deg,
+    #db3567 0%,
+    #156419 0.01%,
+    rgba(21, 100, 25, 0) 100%
+  );
+  border-radius: 150px;
+  margin-bottom: 20px;
+}
+.line_x_4 {
+  width: 130px;
+  height: 6px;
+  background: linear-gradient(
+    270deg,
+    #db3567 0%,
+    #156419 0.01%,
+    rgba(21, 100, 25, 0) 100%
+  );
+  border-radius: 150px;
+  margin-bottom: 20px;
+}
 .ertonil_description {
   margin-bottom: 15px;
 }
@@ -407,6 +455,10 @@
   .ertonil_title > h1 {
     text-align: center;
   }
+  .line_x_4,
+  .line_x_3,
+  .line_x_2,
+  .line_x_1,
   .ertonil_line {
     width: 100%;
   }
