--- a/styles/category.module.css
+++ b/styles/category.module.css
@@ -141,7 +141,6 @@
   margin-bottom: 15px;
   display: flex;
   flex-direction: column;
-  padding-right: 12px;
 }
 .prescription_description > li {
   color: #555;
@@ -196,6 +195,7 @@
   width: 569px;
   height: 419px;
   margin-top: -46px;
+  border-radius: 8px;
 }
 .ertonil_nails_left {
   display: flex;
@@ -286,6 +286,7 @@
   object-fit: cover;
   width: 556px;
   height: 405px;
+  border-radius: 8px;
 }
 .section_question_left > svg {
   position: absolute;
@@ -356,7 +357,6 @@
   margin-bottom: 15px;
   display: flex;
   flex-direction: column;
-  padding-right: 12px;
 }
 .taking_care_description > li {
   color: #555;
