feat(add burn nail page): :sparkles: add burn nail blog page

--- a/styles/blog.module.css
+++ b/styles/blog.module.css
@@ -164,6 +164,7 @@
   color: #fff;
   font-family: "IRANSansWebBold";
   font-size: 30px;
+  text-align: center;
 }
 .section_podology {
   display: flex;
